@@ -53,6 +53,7 @@ Clients:
 - Both clients can now load default configuration options from a file.
 - Add -1 (oneshot) option to mosquitto_sub.
 - Add --proxy SOCKS5 support for both clients.
+- Pub client supports setting its keepalive. Closes bug #454852.
 
 Client library:
 - Add experimental SOCKS5 support.
